Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23711

Changing value of a variable is not honored while debugging

    XMLWordPrintable

Details

    • Windows
    • f71286db98fbc93f415a7d9a6050bc2bc79fdd07 (qt-creator/qt-creator/4.12)

    Description

      While Debugging if a value of any member variable is being changed in expression view, it reverts back to original value moment Enter is hit.

      This can be seen in Qt Ccreator 4.10 and above. This seems to be happening in Windows.

      Attachments

        1. 20200415_123056.mp4
          1.25 MB
        2. MainWindow.zip
          5 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes